SERVER-21331 WTIndexCursors should start in EOF state

Otherwise, if we hit a WCE on the initial attempt to position the cursor,
when we restore() we will attempt to seek to an empty key.